<?xml version="1.0"?>

<package format="2">

  <name>jsk_rviz_plugins_msgs</name>
  <version>0.1.0</version>
  <description>Msgs for jsk_rviz_plugins.</description>

  <license>Proprietary</license>

  <author email="marcot@ethz.ch.com">Marco Tranzatto</author>
  <maintainer email="marcot@ethz.ch.com">Marco Tranzatto</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>

</package>
